2008-02-25  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgst-private.[ch], src/rbgst-mini-object.c,
	src/rbgst-message.c: hid rbgst_mini_object_*().

	* src/rbgst-bin.c, test/test_bin.rb: added tests for Gst::Bin#[].

	* src/rbgst-private.[ch], src/rbgst-mini-object.c,
	src/rbgst-element.c: generalized define_class_if_need().

2008-02-24  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgst-bin.c, test/test_bin.rb: added tests for Gst::Bin#clear.

	* src/rbgst-bin.c, test/test_bin.rb: added tests for Gst::Bin#remove.

	* src/rbgst-bin.c, test/test_bin.rb: added tests for Gst::Bin#<<.

	* src/rbgst-buffer.c: fixed wrong type conversion.

2008-02-23  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgst-bin.c, test/test_bin.rb: added tests for clock_provider.

	* src/rbgst-bin.c, test/test_bin.rb: added tests for
	provided_clock{,=}.

	* src/rbgst-bin.c, test/test_bin.rb: added tests for polling? and
	clock_dirty?.

	* src/rbgst-bin.c, test/test_bin.rb: added tests for child_bus and
	messages.

	* src/rbgst-bin.c, test/test_bin.rb: added tests for children_cookie.

	* src/rbgst-bin.c, test/test_bin.rb: added tests.

2008-02-21  Kouhei Sutou  <kou@cozmixng.org>

	* sample/video-player.rb: caught EOS.

	* src/rbgst.c: followed the recent Ruby/GLib change:
	  rbgutil_{start,stop}_callback_handle_thread ->
	  rbgutil_{start,stop}_callback_dispatch_thread.

	* sample/audio-player.rb: caught EOS.

2008-02-20  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgst-object.c, test/test_object.c: added Gst::Object#name=
	and Gst::Object#sink.

	* test/gst-test-utils.rb: added.
	* test/test_element.rb, test/test_element_factory.rb: used
	GstTestUtils.

2008-02-18  Kouhei Sutou  <kou@cozmixng.org>

	* sample/video-player.rb: cleanup.

	* sample/mp3-player.rb: removed needless file.

	* sample/audio-player.rb: worked as generic audio player.

	* sample/ogg-audio-player.rb: ensure stop.

	* test/: used test-unit-ext on RubyForge.

2008-02-17  Kouhei Sutou  <kou@cozmixng.org>
